--- a/tests/fixtures/colortest.css
+++ b/tests/fixtures/colortest.css
@@ -1,28 +1,31 @@
 #mine {
-	color: red;
-	border-color: rgb(10, 100, 230);
-	border-color: rgba(10, 100, 231, 0.3);
-	outline-color: #222;
-	background-color: #232323;
+    color: red;
+    border-color: rgb(10, 100, 230);
+    border-left-color: rgba(10, 100, 231, 0.3);
+    outline-color: #222;
+    background-color: #232323;
+    accent-color: rgb(10 100 232 / 0.4);
 }
 
 #yours {
-	background-color: hsl(220, 10%, 220%);
-	background-color: hsla(220, 10%, 220%, 0.3);
+    background-color: hsl(220, 10%, 220%);
+    background-color: hsla(220, 10%, 220%, 0.3);
+}
+#variablesNew {
+    background-color: rgb(var(--r) var(--g) var(--b) / var(--a));
 }
 
 #variables {
-	background-color: rgb(var(--some-rgb));
-	background-color: rgb(var(--r), var(--g), var(--b));
-	background-color: rgb(255, var(--g), var(--b));
-	background-color: rgb(255, 255, var(--b));
-	background-color: rgb(255, var(--rg));
-
-	background-color: hsl(var(--some-hsl));
+    background-color: rgb(var(--some-rgb));
+    background-color: rgb(var(--r), var(--g), var(--b));
+    background-color: rgb(255, var(--g), var(--b));
+    background-color: rgb(255, 255, var(--b));
+    background-color: rgb(255, var(--rg));
+    background-color: hsl(var(--some-hsl));
 }
 
 #variables-alpha {
-	background-color: rgba(var(--some-rgb), 0.1);
-	background-color: rgba(var(--some-rg), 255, 0.1);
-	background-color: hsla(var(--some-hsl), 0.1);
+    background-color: rgba(var(--some-rgb), 0.1);
+    background-color: rgba(var(--some-rg), 255, 0.1);
+    background-color: hsla(var(--some-hsl), 0.1);
 }
